--- a/data/articles/my-2022.md
+++ b/data/articles/my-2022.md
@@ -1,5 +1,5 @@
 
-2022 年里我也是顺利从高中毕业，迈入大学生活了。因为疫情原因，从2022年3月开始大概两个半月的时间我们高中都是以网课的形式在上课，这样的话我全天的时间基本都能自由支配了。感谢香子兰群里的大家在 Minecraft 里的陪伴，让我在这段枯燥的学习过程之余多了许多愉快的时光。也感谢 [Misaka13514]、[scientificworld]、[mzwing]、[chihuo2104] 以及其它很多人对我的高考祝福。
+2022 年里我也是顺利从高中毕业，迈入大学生活了。因为疫情原因，从2022年3月开始大概两个半月的时间我们高中都是以网课的形式在上课，感谢这段时间里香子兰群里的大家在 Minecraft 里的陪伴，让我在这段枯燥的学习过程之余多了许多愉快的时光。也感谢 [Misaka13514]、[scientificworld]、[mzwing]、[chihuo2104] 以及其它很多人对我的高考祝福。
 
 高考之后的这个暑假我大概没有做很多事情，虽然回想起来的话好像确实是做了一个[能在群聊中使用的 bot](https://github.com/baiyuanneko/my-bot) 和一个[能从 Minecraft 日志中导出聊天记录的程序](https://nekomoe.xyz/index.html?type=article&filename=minecraft-chat.md)，但是我其实真正花在代码上的时间并不多，还是有点无聊的。这里还是感谢这段时间里香子兰群里的大家在 Minecraft 中的陪伴（特别是 [Misaka13514] 和 [scientificworld]），让我消磨了无聊的时间。
 
@@ -23,6 +23,7 @@
 * [我的 2022 年终总结](https://koishi514.ml/blog/bbg/index.html?type=article&filename=tfdCB7WihRBr.md) by [scientificworld]
 * [2022 年度总结](https://blog.chihuo2104.dev/posts/goodbye-2022) by [chihuo2104]
 * [2023新年快乐！ + 年度总结](https://blog.mk1.io/posts/2023) by [Ray](https://blog.mk1.io/pages/about)
+* [2022总结&My Resolutions](https://mujitogawa.github.io/posts/b7a38911/) by [Muji Togawa](https://mujitogawa.github.io/about/)
 
 [Misaka13514]: https://i.atri.tk/
 [scientificworld]: https://koishi514.ml/
