--- a/data/pages/dn42.md
+++ b/data/pages/dn42.md
@@ -1,27 +1,27 @@
-## My Autonomous System Info
+## Basic Info
 
-### Basic Info
-
-```
-aut-num: AS4242421217
-as-name: BAIYUANNEKO-AS
-descr: baiyuanneko's autonomous network
-admin-c: BAIYUANNEKO-DN42
-tech-c: BAIYUANNEKO-DN42
-mnt-by: BAIYUANNEKO-MNT
-source: DN42
-```
-
-### Routes
-
-* `172.23.40.160/27`
-* `fdec:d434:61fd::/48`
-
-### Contact me
-
-* E-mail: `baiyang-lzy@outlook.com`
-* Telegram: [@baiyuanneko](https://t.me/baiyuanneko)
-
+<table>
+    <tr>
+        <td>ASN</td>
+        <td>4242421217</td>
+    </tr>
+    <tr>
+        <td>MNTNER</td>
+        <td>BAIYUANNEKO-MNT</td>
+    </tr>
+    <tr>
+        <td>IPv4 Block</td>
+        <td>172.23.40.160/27</td>
+    </tr>
+    <tr>
+        <td>IPv6 Block</td>
+        <td>fdec:d434:61fd::/48</td>
+    </tr>
+    <tr>
+        <td>IPv6 Link-Local</td>
+        <td>fe80::1217</td>
+    </tr>
+</table>
 
 ## Peering
 
@@ -106,6 +106,11 @@ protocol bgp dn42_1217_v6 from dnpeers {
 }
 
 ```
+
+### Contact me
+
+* E-mail: `baiyang-lzy@outlook.com`
+* Telegram: [@baiyuanneko](https://t.me/baiyuanneko)
 
 ## Current Peers
 
