--- a/data/articles/my-2023.md
+++ b/data/articles/my-2023.md
@@ -102,6 +102,7 @@ Hackergame 2023 临近结束的时候被 [@wlt233] 超力（悲）（雾
 * [【碎碎念】某魏的 2023 年度总结](https://tqlwsl.moe/index.php/archives/2778/)
 * [SekaiMoe 的 2023 - SekaiMoe's World](https://sekaimoe.dpkg123.site/end-of-2023/)
 * [2023的总结 - CC米饭](https://www.ccrice.com/neworld/761/2023%e7%9a%84%e6%80%bb%e7%bb%93/)
+* [给2023画上一个句号 - 白のblog](https://blog.mashiro.pro/1662.html)
 
 ## 结语
 
