--- a/data/articles/2023-5.md
+++ b/data/articles/2023-5.md
@@ -4,7 +4,7 @@
 
 ## 开始使用 YubiKey
 
-三月份的时候 [Misaka13514](https://i.atri.tk/) 送了我一个 YubiKey 5C NFC，从此就开始了我使用 YubiKey 的经历。那么什么是 YubiKey 呢？请看下面的介绍。
+三月份的时候 [Misaka13514](https://i.apeiria.net/) 送了我一个 YubiKey 5C NFC，从此就开始了我使用 YubiKey 的经历。那么什么是 YubiKey 呢？请看下面的介绍。
 
 > YubiKey是由Yubico生产的身份认证设备，支持一次性密码（OTP）、公钥加密和身份认证，以及由FIDO联盟（FIDO U2F）开发的通用第二因素（U2F）协议。它让用户可以透过提交一次性密码或是使用设备产生的公开/私密金钥来安全地登录自己的帐户。针对不支持一次性密码的网站，YubiKey也可以存储静态密码。Facebook使用YubiKey作为员工凭证；Google同时为雇员和用户提供支持。还有一些密码管理器也支持YubiKey。
 > --- 维基百科<ref url="https://zh.wikipedia.org/wiki/YubiKey">YubiKey - 维基百科</ref>
@@ -45,7 +45,7 @@
 
 ## DN42
 
-在学习 DN42 的过程中学习了 WireGuard 和 BIRD2 等软件的使用，过程中踩了不少坑，感谢 [Misaka13514](https://i.atri.tk/) 孜孜不倦的指导。
+在学习 DN42 的过程中学习了 WireGuard 和 BIRD2 等软件的使用，过程中踩了不少坑，感谢 [Misaka13514](https://i.apeiria.net/) 孜孜不倦的指导。
 
 P.S. 我注册 DN42 域名的时候竟然发现 [neko.dn42](https://neko.dn42/) 这个域名还没有被注册于是直接注册了，成功拿到，好耶！
 
