--- a/data/articles/my-2022.md
+++ b/data/articles/my-2022.md
@@ -19,13 +19,13 @@
 
 也可以看看其它人的年终总结：
 
-* [我的 2022](https://blog.atri.tk/2022/my-2022/) by [Misaka13514]
+* [我的 2022](https://blog.apeiria.net/2022/my-2022/) by [Misaka13514]
 * [我的 2022 年终总结](https://koishi514.ml/blog/bbg/index.html?type=article&filename=tfdCB7WihRBr.md) by [scientificworld]
 * [2022 年度总结](https://blog.chihuo2104.dev/posts/goodbye-2022) by [chihuo2104]
 * [2023新年快乐！ + 年度总结](https://blog.mk1.io/posts/2023) by [Ray](https://blog.mk1.io/pages/about)
 * [2022总结&My Resolutions](https://mujitogawa.github.io/posts/b7a38911/) by [Muji Togawa](https://mujitogawa.github.io/about/)
 
-[Misaka13514]: https://i.atri.tk/
+[Misaka13514]: https://i.apeiria.net/
 [scientificworld]: https://koishi514.ml/
 [chihuo2104]: https://im.chihuo2104.dev/
 [mzwing]: https://mzwing.eu.org/
