--- a/data/articles/my-2023.md
+++ b/data/articles/my-2023.md
@@ -94,7 +94,7 @@ Hackergame 2023 临近结束的时候被 [@wlt233] 超力（悲）（雾
 
 也可以看看其它人的年终总结：
 
-* [我的 2023 - 欠陥電気の摸鱼小池](https://blog.atri.tk/2023/my-2023/)
+* [我的 2023 - 欠陥電気の摸鱼小池](https://blog.apeiria.net/2023/my-2023/)
 * [我的 2023 年终总结 - 无意识の桜](http://koishi514.moe/blog/bbg/index.html?type=article&filename=s5e6TSCZKQXW.md)
 * [小碎记20231209 - 洛仙璃の幻梦](https://mzwing.eu.org/index.html?type=article&filename=small-article-20231209.md)
 * [Byebye 2023(或 17岁再见) - 木屐落在水洼了](https://mjt.asia/posts/ed8b190a/)
@@ -109,7 +109,7 @@ Hackergame 2023 临近结束的时候被 [@wlt233] 超力（悲）（雾
 
 希望自己能在新的一年里技术力越来越高，也祝正在看这篇文章的读者新年快乐！
 
-[@Misaka13514]: https://blog.atri.tk/
+[@Misaka13514]: https://blog.apeiria.net/
 [@scientificworld]: https://koishi514.moe/
 [@chihuo2104]: https://blog.chihuo2104.dev/
 [@littlebear]: https://littlesunnybear.com/
