--- a/data/pages/dn42.md
+++ b/data/pages/dn42.md
@@ -117,7 +117,7 @@ protocol bgp dn42_1217_v6 from dnpeers {
 <table>
     <tr>
         <td>4242421032</td>
-        <td><a href="https://dn42.atri.tk" target="_blank">RadioNoise</a></td>
+        <td><a href="https://dn42.apeiria.net" target="_blank">RadioNoise</a></td>
     </tr>
     <tr>
         <td>4242421216</td>
